--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,11 +5,11 @@ body {
 nav {
 	width: 100vw
 	height: 60px;
-	background: 344051;
+	background: #344051;
 }
 
 .logo {
-	color: fff;
+	color: #fff;
 	font-size: 30px;
 	line-height: 60px;
 	padding-left: 388px;
@@ -25,7 +25,7 @@ nav {
 .menu li {
 	float: left;
 	line-height: 60px;
-	color: fff;
+	color: #fff;
 	margin-right: 40px;
 	font-size: 16px;
 	text-transform: uppercase;
@@ -38,7 +38,31 @@ nav {
 }
 
 .title_cont {
-	width: 70%;
-	height: 100%;
+	float: left;
+	margin: 432px 0px 0px 404px;
+	color: #2c384a;
+	text-align: center;
+}
+
+.title_cont h1 {
+	font-size: 60px;
+	font-weight: bold;
+}
+.title_cont h4 {
+	font-size: 18px;
+	font-weight: 500;
+	margin-top: 30px;
+	color: #79818d;
+}
+.title_cont button {
+	height: 40px;
+	text-align: center;
+	border: 2px solid #79818d;
+	background: none;
+	border-radius: 5px;
+	color: #79818d;
+	font-size: 13px;
+	padding: 0px 20px;
+	margin: 40px 10px 0px 0px;
 
 }
