--- a/src/css/style.css
+++ b/src/css/style.css
@@ -106,22 +106,111 @@ nav {
 
 .Skills {
 	width: 100vw;
-	height: auto;
-	background: #fff;
-	text-align: center;
-	padding: 80px 0;
+	height: 450px;
 	background: url(../img/bg-2.jpg) center/cover no-repeat;
+	padding: 80px 0px;
+	text-align: center;
 }
 .Skills h2 {
 	font-size: 20px;
 	font-weight: bold;
 	text-transform: uppercase;
 	color: #2c384a;
+	text-align: center;
 }
-
+.line {
+	width: 80px;
+	height: 2px;
+	background: #d17700;
+	margin: 30px auto 50px;
+}
 .skill-box {
-	width: 20%;
-	height: auto;
-	padding: 20px 20px;
 	float: left;
+	width: 287px;
+	text-align: center;
+	padding-bottom: 80px;
+}
+.skill-box-1 {
+	float: left;
+	width: 287px;
+	text-align: center;
+	margin-left: 388px;
+	padding-bottom: 80px;
+}
+.skill-box h3 {
+	font-size: 18px;
+	font-weight: bold;
+	color: #d17700;
+	text-align: center;
+	margin: 20px 20px;
+}
+.skill-box-1 h3 {
+	font-size: 18px;
+	font-weight: bold;
+	color: #d17700;
+	text-align: center;
+	margin: 20px 20px;
+}
+.Skills p {
+	font-size: 15px;
+	font-weight: normal;
+	color: #000;
+	width: 90%;
+	}
+
+.Cases {
+	width: 100vw;
+	height: 1200px;
+	background: #fff;
+	padding: 80px 0px;
+	text-align: center;
+}
+.Cases h2 {
+	font-size: 20px;
+	font-weight: bold;
+	text-transform: uppercase;
+	color: #2c384a;
+	text-align: center;
+}
+.line {
+	width: 80px;
+	height: 2px;
+	background: #d17700;
+	margin: 30px auto 50px;
+}
+.Cases p {
+	font-size: 15px;
+	font-weight: normal;
+	color: #000;
+	width: 100%;
+}
+.cases_img-box {
+	margin: 30px 0px;
+}
+.client-name_box {
+	width: 287px;
+	height: 206px;
+	margin-left: 388px;
+	float: left;
+	text-align: left;
+}
+.client-name_box button {
+	height: 40px;
+	text-align: center;
+	border: 2px solid #63b5ae;
+	background: #63b5ae;
+	border-radius: 5px;
+	color: #fff;
+	font-size: 13px;
+	padding: 0px 20px;
+}
+.project-description_box {
+	width: 1500px;
+	height: 206px;
+}
+.project-description_box p {
+	font-size: 15px;
+	font-weight: normal;
+	color: #000;
+	text-align: left;
 }
