--- a/src/css/style.css
+++ b/src/css/style.css
@@ -160,7 +160,7 @@ nav {
 
 .Cases {
 	width: 100vw;
-	height: 1200px;
+	height: 1100px;
 	background: #fff;
 	padding: 80px 0px;
 	text-align: center;
@@ -213,4 +213,165 @@ nav {
 	font-weight: normal;
 	color: #000;
 	text-align: left;
+}
+
+.Calculation {
+	width: 100vw;
+	height: 500px;
+	background: #fff;
+	margin-bottom: 50px;
+}
+.Calculation h2 {
+	font-size: 20px;
+	font-weight: bold;
+	text-transform: uppercase;
+	color: #2c384a;
+	text-align: center;
+	margin-bottom: 30px;
+}
+.Calculation h4 {
+	font-size: 18px;
+	font-weight: 500;
+	margin-bottom: 30px;
+	color: #2c384a;
+	margin-left: 494px;
+}
+.select {
+	display: block;
+	border: 1px solid #cecece;
+	background-color: #F6F6f6;
+	width: 890px;
+	padding: 4px 15px 4px 10px;
+	color: #444;
+	margin-left: 494px;
+	}
+	.line_gray {
+		margin: 40px 0px 20px 494px;
+		width: 890px;
+		height: 1px;
+		background: #eeeeee;
+
+	}
+	.Calculation p {
+		margin: 0px 0px 15px 494px;
+		font-size: 18px
+		font-weight: 900;
+		color: #2c384a;
+	}
+
+	
+.Statistic {
+	width: 100vw;
+	height: 400px;
+	background: url(../img/bg-3.jpg) center/cover no-repeat;
+	padding: 80px 0px;
+	text-align: center;
+}
+.Statistic h2 {
+	font-size: 20px;
+	font-weight: bold;
+	text-transform: uppercase;
+	color: #2c384a;
+	text-align: center;
+}
+.line {
+	width: 80px;
+	height: 2px;
+	background: #d17700;
+	margin: 30px auto 50px;
+}
+
+.statistic-box_1 {
+	float: left;
+	width: 287px;
+	text-align: center;
+	margin-left: 388px;
+	padding-bottom: 80px;
+}
+.statistic-box {
+	float: left;
+	width: 287px;
+	text-align: center;
+	padding-bottom: 80px;
+}
+.digit {
+	text-align: center;
+	font-size: 30px;
+	font-weight: 900;
+	color: #2c384a;
+	margin: 20px 0px;
+}
+.a {
+	font-size: 15px;
+	font-weight: 500;
+	color: #2c384a;
+}
+
+.Feedback {
+	width: 100vw;
+	height: 500px;
+	background: #fff;
+	padding: 80px 0px;
+	text-align: center;
+}
+.Feedback h2 {
+	font-size: 20px;
+	font-weight: bold;
+	text-transform: uppercase;
+	color: #2c384a;
+	text-align: center;
+}
+.Feedback p {
+	font-size: 15px;
+	font-weight: 400;
+	color: #2c384a;
+	margin: 30px auto;
+	width: 780px;
+}
+
+.Contacts {
+	width: 100vw;
+	height: 1000px;
+	background: url(../img/bg-4.jpg) center/cover no-repeat;
+	padding: 80px 0px;
+	text-align: center;
+}
+.Contacts h2 {
+	font-size: 20px;
+	font-weight: bold;
+	text-transform: uppercase;
+	color: #fff;
+	text-align: center;
+}
+.line {
+	width: 80px;
+	height: 2px;
+	background: #d17700;
+	margin: 30px auto 50px;
+}
+.Contacts p {
+	font-size: 15px;
+	font-weight: 400;
+	color: #fff;
+	margin: 30px auto;
+	width: 780px;
+}
+.contact-box {
+	width: 240px;
+	height: 110px;
+	text-align: center;
+	float: left;
+}
+.contact-box_1 {
+	width: 240px;
+	height: 110px;
+	text-align: center;
+	float: left; 
+	margin-left: 607px;
+}
+.Contact h4 {
+	font-size: 18px;
+	font-weight: 500;
+	margin: 30px auto;
+	color: #eee;
 }
